tests/sksl/errors/ReservedNameSampler3DRect.glsl
### Compilation failed:

error: 1: name 'sampler3DRect' is reserved
int sampler3DRect;
    ^^^^^^^^^^^^^
1 error
